# python-rpa-platform

./: .caddy.generated.Caddyfile  .dockerignore  .gitignore  .release-please-config.json  AGENTS.md  CHANGELOG.md  Caddyfile  Caddyfile.example  README.md  agent_service.spec  deploy.ps1  docker-compose.yml  pyproject.toml  run-caddy.ps1  server_settings.db  server_settings.db-shm  server_settings.db-wal  server_settings.db.pre-client-secret.bak  server_settings.pre-sso-reset.bak  set-entra-client-secret.ps1  start-docker-from-github.ps1  start-local.ps1  stop-local.ps1
.github/agents/: server-event-refactor.agent.md
.github/workflows/: build-agent.yml  release-please.yml
docker/: backend.Dockerfile  frontend.Dockerfile
docker/caddy/: Caddyfile
docs/: ARCHITECTURE.md  CADDY.md  DOCKER_COMPOSE_GUACAMOLE.md  GUACAMOLE_RECORDINGS_NGINX.md  SERVER_EVENT_HANDLER_REFACTOR.md  VM_AGENT_NETWORK_REFACTOR.md
frontend/: README.md  package-lock.json  package.json
microsoft Windows-classic-samples main Samples-CredentialProvider_cpp/: AgentNamedPipe.cpp  AgentNamedPipe.h  CSampleCredential.cpp  CSampleCredential.h  CSampleProvider.cpp  CSampleProvider.h  Dll.cpp  DpapiHelpers.cpp  DpapiHelpers.h  SampleV2CredentialProvider.vcxproj  SampleV2CredentialProvider.vcxproj.filters  helpers.cpp  helpers.h
scripts/: generate_release_changelog.py
shared/: .version
shared/core/: event_handler.py  iprocesable.py
shared/network/: iconnection.py  ireceivable_event.py  isendable_event.py
vm_agent/: requirements.txt
vm_agent_server/: build_service.bat  index.html
(+196 files in other folders)
